--- a/index.html
+++ b/index.html
@@ -2085,6 +2085,9 @@
         t: 0,
         r: 16,
         flip: Math.random() < 0.5,
+        frame: 0,
+        frameT: 0,
+        frameStep: rand(0.10, 0.14),
       };
       humans.push(h);
     }
@@ -2722,39 +2725,71 @@
       return true;
     }
 
-    function drawHuman(h){
+    function drawHumanSprite(h){
+      const img = Assets.humanSprite;
+      if (!img) return false;
+      const frames = 4;
+      const fw = img.width / frames;
+      const fh = img.height;
+      const f = h.frame % frames;
+      const size = h.r * 2.2;
+
+      ctx.save();
+      ctx.translate(h.x, h.y);
+      ctx.scale(h.flip ? -1 : 1, 1);
+
+      // shadow
+      ctx.fillStyle = "rgba(0,0,0,.32)";
+      ctx.beginPath();
+      ctx.ellipse(0, size*0.32, size*0.42, size*0.16, 0, 0, Math.PI*2);
+      ctx.fill();
+
+      ctx.globalAlpha = 0.98;
+      ctx.drawImage(img, f*fw, 0, fw, fh, -size/2, -size/2, size, size);
+      ctx.restore();
+      return true;
+    }
+
+    function drawHumanProcedural(h){
       const x = h.x;
       const y = h.y;
       const r = h.r;
       ctx.save();
       ctx.translate(x, y);
       ctx.scale(h.flip ? -1 : 1, 1);
-      if (Assets.humanSpriteOk && Assets.humanSprite){
-        const size = r * 2.2;
-        ctx.drawImage(Assets.humanSprite, -size/2, -size/2, size, size);
-      } else {
-        // simple bright stick figure
-        ctx.strokeStyle = "rgba(248,250,252,0.9)";
-        ctx.fillStyle = "rgba(244,244,245,0.85)";
-        ctx.lineWidth = 3;
-        ctx.beginPath();
-        ctx.arc(0, -r*0.45, r*0.42, 0, Math.PI*2);
-        ctx.fill();
-        ctx.stroke();
-        ctx.beginPath();
-        ctx.moveTo(0, -r*0.05);
-        ctx.lineTo(0, r*0.9);
-        ctx.moveTo(0, r*0.2);
-        ctx.lineTo(-r*0.7, r*0.55);
-        ctx.moveTo(0, r*0.2);
-        ctx.lineTo(r*0.7, r*0.55);
-        ctx.moveTo(0, r*0.9);
-        ctx.lineTo(-r*0.5, r*1.6);
-        ctx.moveTo(0, r*0.9);
-        ctx.lineTo(r*0.5, r*1.6);
-        ctx.stroke();
-      }
+      ctx.fillStyle = "rgba(0,0,0,.28)";
+      ctx.beginPath();
+      ctx.ellipse(0, r*0.9, r*0.85, r*0.32, 0, 0, Math.PI*2);
+      ctx.fill();
+      // simple bright stick figure
+      ctx.strokeStyle = "rgba(248,250,252,0.9)";
+      ctx.fillStyle = "rgba(244,244,245,0.85)";
+      ctx.lineWidth = 3;
+      ctx.beginPath();
+      ctx.arc(0, -r*0.45, r*0.42, 0, Math.PI*2);
+      ctx.fill();
+      ctx.stroke();
+      ctx.beginPath();
+      ctx.moveTo(0, -r*0.05);
+      ctx.lineTo(0, r*0.9);
+      ctx.moveTo(0, r*0.2);
+      ctx.lineTo(-r*0.7, r*0.55);
+      ctx.moveTo(0, r*0.2);
+      ctx.lineTo(r*0.7, r*0.55);
+      ctx.moveTo(0, r*0.9);
+      ctx.lineTo(-r*0.5, r*1.6);
+      ctx.moveTo(0, r*0.9);
+      ctx.lineTo(r*0.5, r*1.6);
+      ctx.stroke();
       ctx.restore();
+    }
+
+    function drawHuman(h){
+      if (Assets.humanSpriteOk && Assets.humanSprite) {
+        const ok = drawHumanSprite(h);
+        if (ok) return;
+      }
+      drawHumanProcedural(h);
     }
 
     function drawTurret(){
@@ -2877,6 +2912,11 @@
         const margin = 18;
         h.x = clamp(h.baseX + wiggle, margin, State.w - margin);
         h.y += h.vy * dt;
+        h.frameT += dt;
+        if (h.frameT >= (h.frameStep || 0.12)) {
+          h.frameT = 0;
+          h.frame = (h.frame + 1) & 3;
+        }
         if (h.y - h.r > State.h) {
           humans[i] = humans[humans.length - 1];
           humans.pop();
